Thats it. Done.

--- a/src/main/resources/templates/drink-list.html
+++ b/src/main/resources/templates/drink-list.html
@@ -9,6 +9,7 @@
     <link th:href="@{../css/style.css}" rel="stylesheet" type="text/css">
 </head>
 <body>
+<img class="top-image"  th:src="@{https://i.imgur.com/wlqbBqu.png}"/>
 <div class="menu">
     <ul>
         <li><a href="/main">Home</a></li>
