--- a/src/main/resources/templates/address-input.html
+++ b/src/main/resources/templates/address-input.html
@@ -60,7 +60,7 @@
         <p th:if="${#fields.hasErrors('zip')}" th:errors="*{zip}">Zip code must be 5 digits</p>
         <label for="phoneNumber">Phone number</label>
         <input type="text" th:field="*{phoneNumber}" id="phoneNumber" class="form-input">
-
+        <p th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}">Phone number length must be 11 digits!</p>
 
         <input  class="getButton" type="submit" value="Continue to Payment">
     </form>
