--- a/src/main/resources/templates/myProfile.html
+++ b/src/main/resources/templates/myProfile.html
@@ -62,12 +62,15 @@
         <div class="order-card" th:each="order: ${user.getOrders()}">
 <p>Your menu</p>
             <div th:each="cartItem : ${order.getCartItems()}">
+                <a>Meal :</a>
                 <a th:text="${cartItem?.modifiedPizza?.name}"></a>
                 <a th:text="${cartItem.modifiedPizza?.description}"></a>
                 <a th:text="${cartItem?.drink?.name}"></a>
                 <p>Quantity :</p>
-                <a th:text="${cartItem?.pizzaQuantity}"> </a>
-                <a th:text="${cartItem?.drinkQuantity}"></a>
+
+                <a th:text="${cartItem.pizzaQuantity != 0} ? ${cartItem.pizzaQuantity} : ''"></a>
+
+                <a th:text="${cartItem.drinkQuantity != 0} ? ${cartItem.drinkQuantity} : ''"></a>
             </div>
             <p>Order Date</p>
             <a th:text="${order.getDate()}"></a>
