--- a/src/main/resources/templates/show-order-info.html
+++ b/src/main/resources/templates/show-order-info.html
@@ -42,8 +42,10 @@
     <a th:text="${cartItem.modifiedPizza?.description}"></a>
     <a th:text="${cartItem?.drink?.name}"></a>
     <p>Quantity :</p>
-    <a th:text="${cartItem?.pizzaQuantity}"> </a>
-    <a th:text="${cartItem?.drinkQuantity}"></a>
+
+    <a th:text="${cartItem.pizzaQuantity != 0} ? ${cartItem.pizzaQuantity} : ''"></a>
+
+    <a th:text="${cartItem.drinkQuantity != 0} ? ${cartItem.drinkQuantity} : ''"></a>
     <p>User info</p>
     <a th:text="${order.user.firstName}"></a>
     <a th:text="${order.user.secondName}"></a>
